# Cpp-ReadIPCam

./: CMakeLists.txt  main.cpp
